# tmp

./: Makefile  pyproject.toml
docs/: sources.md
docs/fw/: bentoml.txt  lighautoml.txt
notebooks/: baseline.ipynb
scripts/: update_bentofile.py
src/serving/: bentofile.yaml  load_model.py  service.py
